--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="main.css">
     <body>
 
         <h1>Blockchain for submitting translations</h1>
