--- a/main.html
+++ b/main.html
@@ -3,7 +3,15 @@
     <link rel="stylesheet" href="main.css">
     <body>
 
-        <h1>Blockchain for submitting translations</h1>
+        <h1>Welcome to BlockTrans</h1>
+        <h2>We're a blackchain based translation service</h2>
+
+        <button type="button">Home</button>
+        <button type="button">Translator</button>
+        <button type="button">Editor</button>
+        <button type="button">Manager</button>
+
+
 
         <p>Our group has made the concept of a blockchain which is used to submit translations. This idea was the result of a lack of good translation software.</p>
 
