--- a/manager.html
+++ b/manager.html
@@ -59,6 +59,16 @@ await setMoodPromise;
 }
 
 </script>
+
+<style>
+body{
+    background-color: lightcyan;
+}
+button{
+    text-align: center;
+    display: inline-block;
+}
+</style>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Managers</title>
@@ -77,6 +87,9 @@ await setMoodPromise;
       bottom: 0;
       height: inherit;
     }
+    body{
+    background-color: lightcyan;
+}
     </style>
 <div class="w3-top">
     <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
